--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,15 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-repositories {
+//create a single Jar with all dependencies
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.somlaser.Main'
+    }
+}
+
+
+    repositories {
     mavenCentral()
 }
 
