--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,24 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+
+repositories {
+    mavenCentral()
+}
+
+configurations {
+    // configuration that holds jars to include in the jar
+    extraLibs
+}
+
 //create a single Jar with all dependencies
 jar {
     manifest {
         attributes 'Main-Class': 'com.somlaser.Main'
     }
-}
-
-
-    repositories {
-    mavenCentral()
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 dependencies {
